Use correct reactor-test
Otherwise get a NoClassDefFoundError

--- a/ffs-service/pom.xml
+++ b/ffs-service/pom.xml
@@ -62,9 +62,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.projectreactor.addons</groupId>
+			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
-			<version>3.1.0.BUILD-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
